--- a/Phase 1 - Create Model/PlanarWalker.ipynb
+++ b/Phase 1 - Create Model/PlanarWalker.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sympy as sm\n",
     "import sympy.physics.mechanics as me\n",
-    "from sympy.physics.vector import init_vprinting, vlatex"
+    "from sympy.physics.vector import init_vprinting, vlatex\n",
+    "from pydy.codegen.ode_function_generators import generate_ode_function\n",
+    "from scipy.integrate import odeint\n",
+    "from pydy.viz.shapes import Cylinder, Sphere\n",
+    "import pydy.viz\n",
+    "pydy.viz.shapes.__all__\n",
+    "from pydy.viz.visualization_frame import VisualizationFrame\n",
+    "from pydy.viz.scene import Scene"
    ]
   },
   {
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,6 +199,7 @@
     "                                      vL - qL.diff(),\n",
     "                                      vRH - qRH.diff(),\n",
     "                                      vLH - qLH.diff(),\n",
+    "                                      vRK - qRK.diff(),\n",
     "                                      vLK - qLK.diff(),\n",
     "                                      vRA - qRA.diff(),\n",
     "                                      vLA - qLA.diff()]"
@@ -206,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +257,7 @@
        "vPx(t)*W.x + vPy(t)*W.y + c_pelvis*vPz(t)*P.x + L_thigh*(vLH(t) + vPz(t))*LT.x + L_shank*(vLH(t) + vLK(t) + vPz(t))*LS.x - (-L_foot + c_foot)*(vLA(t) + vLH(t) + vLK(t) + vPz(t))*LF.x + cx_foot*(vLA(t) + vLH(t) + vLK(t) + vPz(t))*LF.y"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pevlis_mass, torso_mass, thigh_mass, shank_mass, foot_mass = sm.symbols('m_pelvis m_torso m_thigh m_shank m_foot')"
+    "pelvis_mass, torso_mass, thigh_mass, shank_mass, foot_mass = sm.symbols('m_pelvis m_torso m_thigh m_shank m_foot')"
    ]
   },
   {
@@ -322,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,12 +371,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
     "pelvis = me.RigidBody('Pelvis',pelvis_mass_center,pelvis_frame,\n",
-    "                      pevlis_mass,pelvis_central_inertia)\n",
+    "                      pelvis_mass,pelvis_central_inertia)\n",
     "\n",
     "torso = me.RigidBody('Torso',torso_mass_center,torso_frame,\n",
     "                     torso_mass,torso_central_inertia)\n",
@@ -408,10 +416,425 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sm.symbols('g')\n",
+    "\n",
+    "#Pelvis\n",
+    "pelvis_grav_force_vector = -pelvis_mass*g*world_frame.y\n",
+    "pelvis_grav_force = (pelvis_mass_center,pelvis_grav_force_vector)\n",
+    "\n",
+    "#Torso\n",
+    "torso_grav_force_vector = -torso_mass*g*world_frame.y\n",
+    "torso_grav_force = (torso_mass_center, torso_grav_force_vector)\n",
+    "\n",
+    "#Right Thigh\n",
+    "right_thigh_grav_force_vector = -thigh_mass*g*world_frame.y\n",
+    "right_thigh_grav_force = (right_thigh_mass_center,right_thigh_grav_force_vector)\n",
+    "\n",
+    "#Left Thigh\n",
+    "left_thigh_grav_force_vector = -thigh_mass*g*world_frame.y\n",
+    "left_thigh_grav_force = (left_thigh_mass_center,left_thigh_grav_force_vector)\n",
+    "\n",
+    "#Right Shank\n",
+    "right_shank_grav_force_vector = -shank_mass*g*world_frame.y\n",
+    "right_shank_grav_force = (right_shank_mass_center,right_shank_grav_force_vector)\n",
+    "\n",
+    "#Left Shank\n",
+    "left_shank_grav_force_vector = -shank_mass*g*world_frame.y\n",
+    "left_shank_grav_force = (left_shank_mass_center,left_shank_grav_force_vector)\n",
+    "\n",
+    "#Right Foot\n",
+    "right_foot_grav_force_vector = -foot_mass*g*world_frame.y\n",
+    "right_foot_grav_force = (right_foot_mass_center,right_foot_grav_force_vector)\n",
+    "\n",
+    "#Left Foot\n",
+    "left_foot_grav_force_vector = -foot_mass*g*world_frame.y\n",
+    "left_foot_grav_force = (left_foot_mass_center,left_foot_grav_force_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Joint Torque:** Define the torque acting at each of the joints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lumbar_torque = me.dynamicsymbols('T_lumbar')\n",
+    "right_hip_torque = me.dynamicsymbols('T_righhip')\n",
+    "left_hip_torque = me.dynamicsymbols('T_lefthip')\n",
+    "right_knee_torque = me.dynamicsymbols('T_rightknee')\n",
+    "left_knee_torque = me.dynamicsymbols('T_leftknee')\n",
+    "right_ankle_torque = me.dynamicsymbols('T_rightankle')\n",
+    "left_ankle_torque = me.dynamicsymbols('T_leftankle')\n",
+    "\n",
+    "#Pelvis\n",
+    "pelvis_torque_vector = right_hip_torque*world_frame.z + left_hip_torque*world_frame.z - lumbar_torque*world_frame.z\n",
+    "pelvis_torque = (pelvis_frame,pelvis_torque_vector)\n",
+    "#Torso\n",
+    "torso_torque_vector = lumbar_torque*world_frame.z\n",
+    "torso_torque = (torso_frame,torso_torque_vector)\n",
+    "#Right Thigh\n",
+    "right_thigh_torque_vector = right_knee_torque*world_frame.z - right_hip_torque*world_frame.z\n",
+    "right_thigh_torque = (right_thigh_frame,right_thigh_torque_vector)\n",
+    "#Left Thigh\n",
+    "left_thigh_torque_vector = left_knee_torque*world_frame.z - left_hip_torque*world_frame.z\n",
+    "left_thigh_torque = (left_thigh_frame,left_thigh_torque_vector)\n",
+    "#Right Shank\n",
+    "right_shank_torque_vector = right_ankle_torque*world_frame.z - right_knee_torque*world_frame.z\n",
+    "right_shank_torque = (right_shank_frame,right_shank_torque_vector)\n",
+    "#Left Shank\n",
+    "left_shank_torque_vector = left_ankle_torque*world_frame.z - left_knee_torque*world_frame.z\n",
+    "left_shank_torque = (left_shank_frame,left_shank_torque_vector)\n",
+    "#Right Foot\n",
+    "right_foot_torque_vector = -right_ankle_torque*world_frame.z\n",
+    "right_foot_torque = (right_foot_frame,right_foot_torque_vector)\n",
+    "#Left Foot\n",
+    "left_foot_torque_vector = -left_ankle_torque*world_frame.z\n",
+    "left_foot_torque = (left_foot_frame,left_foot_torque_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Equations of Motion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Kane's Method:** Use Kane's Method to formulate the equations of motion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = [qPx,qPy,qPz,qL,qRH,qLH,qRK,qLK,qRA,qLA]\n",
+    "speeds = [vPx,vPy,vPz,vL,vRH,vLH,vRK,vLK,vRA,vLA]\n",
+    "\n",
+    "kane = me.KanesMethod(world_frame,coordinates,speeds,kinematical_differential_equations)\n",
+    "\n",
+    "loads = [pelvis_grav_force,\n",
+    "         torso_grav_force,\n",
+    "         right_thigh_grav_force,\n",
+    "         left_thigh_grav_force,\n",
+    "         right_shank_grav_force,\n",
+    "         left_shank_grav_force,\n",
+    "         right_foot_grav_force,\n",
+    "         left_foot_grav_force,\n",
+    "         pelvis_torque,\n",
+    "         torso_torque,\n",
+    "         right_thigh_torque,\n",
+    "         left_thigh_torque,\n",
+    "         right_shank_torque,\n",
+    "         left_shank_torque,\n",
+    "         right_foot_torque,\n",
+    "         left_foot_torque]\n",
+    "\n",
+    "bodies = [pelvis,\n",
+    "          torso,\n",
+    "          right_thigh,\n",
+    "          left_thigh,\n",
+    "          right_shank,\n",
+    "          left_shank,\n",
+    "          right_foot,\n",
+    "          left_foot]\n",
+    "\n",
+    "fr, frstar = kane.kanes_equations(bodies,loads)\n",
+    "mass_matrix = kane.mass_matrix_full\n",
+    "forcing_vector = kane.forcing_full"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Variables:** Declare the variables for the simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constants = [pelvis_length,\n",
+    "             torso_length,\n",
+    "             thigh_length,\n",
+    "             shank_length,\n",
+    "             foot_length,\n",
+    "             foot_width,\n",
+    "             pelvis_com_length,\n",
+    "             torso_com_length,\n",
+    "             thigh_com_length,\n",
+    "             shank_com_length,\n",
+    "             foot_com_length,\n",
+    "             foot_com_length_x,\n",
+    "             pelvis_mass,\n",
+    "             torso_mass,\n",
+    "             thigh_mass,\n",
+    "             shank_mass,\n",
+    "             foot_mass,\n",
+    "             pelvis_inertia,\n",
+    "             torso_inertia,\n",
+    "             thigh_inertia,\n",
+    "             shank_inertia,\n",
+    "             foot_inertia,\n",
+    "             g]\n",
+    "\n",
+    "coordinates = [qPx,qPy,qPz,qL,qRH,qLH,qRK,qLK,qRA,qLA]\n",
+    "speeds = [vPx,vPy,vPz,vL,vRH,vLH,vRK,vLK,vRA,vLA]\n",
+    "\n",
+    "specified = [lumbar_torque,right_hip_torque,left_hip_torque,\n",
+    "             right_knee_torque,left_knee_torque,\n",
+    "             right_ankle_torque, left_ankle_torque]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Generate Numerical ODE Function:** Use PyDy to generate the ODEs for odeint to integrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function rhs in module pydy.codegen.ode_function_generators:\n",
+      "\n",
+      "rhs(*args)\n",
+      "    Returns the derivatives of the states, i.e. numerically evaluates the right\n",
+      "    hand side of the first order differential equation.\n",
+      "\n",
+      "    x' = f(x, t, r, p)\n",
+      "\n",
+      "    Parameters\n",
+      "    ==========\n",
+      "    x : ndarray, shape(20,)\n",
+      "        The state vector is ordered as such:\n",
+      "            - qPx(t)\n",
+      "            - qPy(t)\n",
+      "            - qPz(t)\n",
+      "            - qL(t)\n",
+      "            - qRH(t)\n",
+      "            - qLH(t)\n",
+      "            - qRK(t)\n",
+      "            - qLK(t)\n",
+      "            - qRA(t)\n",
+      "            - qLA(t)\n",
+      "            - vPx(t)\n",
+      "            - vPy(t)\n",
+      "            - vPz(t)\n",
+      "            - vL(t)\n",
+      "            - vRH(t)\n",
+      "            - vLH(t)\n",
+      "            - vRK(t)\n",
+      "            - vLK(t)\n",
+      "            - vRA(t)\n",
+      "            - vLA(t)\n",
+      "    t : float\n",
+      "        The current time.\n",
+      "    r : dictionary; ndarray, shape(7,); function\n",
+      "\n",
+      "        There are three options for this argument. (1) is more flexible but\n",
+      "        (2) and (3) are much more efficient.\n",
+      "\n",
+      "        (1) A dictionary that maps the specified functions of time to floats,\n",
+      "        ndarrays, or functions that produce ndarrays. The keys can be a single\n",
+      "        specified symbolic function of time or a tuple of symbols. The total\n",
+      "        number of symbols must be equal to 7. If the value is a\n",
+      "        function it must be of the form g(x, t), where x is the current state\n",
+      "        vector ndarray and t is the current time float and it must return an\n",
+      "        ndarray of the correct shape. For example::\n",
+      "\n",
+      "          r = {a: 1.0,\n",
+      "               (d, b) : np.array([1.0, 2.0]),\n",
+      "               (e, f) : lambda x, t: np.array(x[0], x[1]),\n",
+      "               c: lambda x, t: np.array(x[2])}\n",
+      "\n",
+      "        (2) A ndarray with the specified values in the correct order and of the\n",
+      "        correct shape.\n",
+      "\n",
+      "        (3) A function that must be of the form g(x, t), where x is the current\n",
+      "        state vector and t is the current time and it must return an ndarray of\n",
+      "        the correct shape.\n",
+      "\n",
+      "        The specified inputs are, in order:\n",
+      "            - T_lumbar(t)\n",
+      "            - T_righhip(t)\n",
+      "            - T_lefthip(t)\n",
+      "            - T_rightknee(t)\n",
+      "            - T_leftknee(t)\n",
+      "            - T_rightankle(t)\n",
+      "            - T_leftankle(t)\n",
+      "    p : dictionary len(23) or ndarray shape(23,)\n",
+      "        Either a dictionary that maps the constants symbols to their numerical\n",
+      "        values or an array with the constants in the following order:\n",
+      "            - L_pelvis\n",
+      "            - L_torso\n",
+      "            - L_thigh\n",
+      "            - L_shank\n",
+      "            - L_foot\n",
+      "            - W_foot\n",
+      "            - c_pelvis\n",
+      "            - c_torso\n",
+      "            - c_thigh\n",
+      "            - c_shank\n",
+      "            - c_foot\n",
+      "            - cx_foot\n",
+      "            - m_pelvis\n",
+      "            - m_torso\n",
+      "            - m_thigh\n",
+      "            - m_shank\n",
+      "            - m_foot\n",
+      "            - I_pelvis\n",
+      "            - I_torso\n",
+      "            - I_thigh\n",
+      "            - I_shank\n",
+      "            - I_foot\n",
+      "            - g\n",
+      "\n",
+      "    Returns\n",
+      "    =======\n",
+      "    dx : ndarray, shape(20,)\n",
+      "        The derivative of the state vector.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "right_hand_side = generate_ode_function(forcing_vector,\n",
+    "                                        coordinates,speeds,\n",
+    "                                        constants,\n",
+    "                                        mass_matrix = mass_matrix,\n",
+    "                                        specifieds = specified)\n",
+    "\n",
+    "help(right_hand_side)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Function Inputs:** Initial conditions, parameter values, and time array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initial Conditions\n",
+    "x0 = np.zeros(20)\n",
+    "\n",
+    "#Constants\n",
+    "numerical_constants = np.array([0.1, #Pevlis length [m]\n",
+    "                                1.0, #torso length [m]\n",
+    "                                0.6, #thigh length [m]\n",
+    "                                0.5, #shank length [m]\n",
+    "                                0.1, #foot length\n",
+    "                                0.3, #Foot width\n",
+    "                                0.05, #Pelvis com length [m]\n",
+    "                                0.5, #torso com length [m]\n",
+    "                                0.3, #thigh com length \n",
+    "                                0.25, #shank com length \n",
+    "                                0.05, #foot com length\n",
+    "                                0.15, #foot com length x\n",
+    "                                10.0, #pelvis mass\n",
+    "                                30.0, #torso mass \n",
+    "                                15.0, #Thigh mass\n",
+    "                                10.0, #shank mass\n",
+    "                                5.0, #foot mass\n",
+    "                                3.0, #Pelvis inertia\n",
+    "                                8.0, #torso inertia\n",
+    "                                2.0, #thigh inertia\n",
+    "                                1.0, #shank inertia\n",
+    "                                0.5, #Foot inertia\n",
+    "                                9.81]) #gravity\n",
+    "\n",
+    "numerical_specified = np.zeros(7)\n",
+    "\n",
+    "args = {'constants': numerical_constants,\n",
+    "        'specified': numerical_specified}\n",
+    "\n",
+    "frame_per_sec = 60.0\n",
+    "final_time = 10.0\n",
+    "\n",
+    "t = np.linspace(0.0,final_time,int(final_time*frame_per_sec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Integrate the ODE:** Use odeint to solve the ODEs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\anbes\\AppData\\Local\\Temp\\ipykernel_12856\\827528399.py:1: ODEintWarning: Excess work done on this call (perhaps wrong Dfun type). Run with full_output = 1 to get quantitative information.\n",
+      "  y = odeint(right_hand_side,x0,t,args=(numerical_specified,numerical_constants))\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = odeint(right_hand_side,x0,t,args=(numerical_specified,numerical_constants))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ankle_shape = Sphere(color = 'black',radius = 0.05)\n",
+    "knee_shape = Sphere(color = 'black',radius = 0.05)\n",
+    "hip_shape = Sphere(color = 'black',radius = 0.05)\n",
+    "lumbar_shape = Sphere(color = 'black',radius = 0.05)\n",
+    "head_shape = Sphere(color = 'black',radius = 0.1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
